--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="comparador.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -33,11 +35,216 @@
 
     <div class="textvideo">
       <h1 class="">HORA PUNTA</h1>
-      <h2 class="">Nuria González, directora de soluciones innovadoras de Novartis Farmacéutica, empieza el día desayunando en la cocina de su madre, enfermera jubilada de 70 años que debido a una caída está inmovilizada: “Hace dos años esto sería impensable, trabajar y atender a mi madre en los descansos”. Raquel Coca, directora de innovación y operaciones para el cliente de Novartis Oncología, desayuna con sus hijos pequeños a las ocho de la mañana en su casa de Villaviciosa de Odón, Madrid. Está amaneciendo cuando encara la M-30 y tras 45 minutos de trayecto llega a la oficina: “Si hay atasco, voy haciendo reuniones con el manos libres desde el coche, así no pierdo el tiempo”.</h2>
-      <h2 class=""><b>Seleccione qué vídeo quiere ver</b></h2>
+      <h2 class="">
+        Nuria González, directora de soluciones innovadoras de Novartis
+        Farmacéutica, empieza el día desayunando en la cocina de su madre,
+        enfermera jubilada de 70 años que debido a una caída está inmovilizada:
+        “Hace dos años esto sería impensable, trabajar y atender a mi madre en
+        los descansos”. Raquel Coca, directora de innovación y operaciones para
+        el cliente de Novartis Oncología, desayuna con sus hijos pequeños a las
+        ocho de la mañana en su casa de Villaviciosa de Odón, Madrid. Está
+        amaneciendo cuando encara la M-30 y tras 45 minutos de trayecto llega a
+        la oficina: “Si hay atasco, voy haciendo reuniones con el manos libres
+        desde el coche, así no pierdo el tiempo”.
+      </h2>
+      <h2 class="ddd"><b>Seleccione qué vídeo quiere ver</b></h2>
     </div>
 
+    <div class="comparador-videos">
+      <div class="cv-c">
+        <div class="cv-f">
+          <span class="cv-f_a" style="width: 50%"
+            ><img src="assets/1a.jpg"
+          /></span>
+          <span class="cv-f_b" style="width: 50%"
+            ><img src="assets/1b.jpg"
+          /></span>
+        </div>
+        <div class="cv-v">
+          <div class="cv-v_a ocultar">
+            <div id="contenedor_video_1A" tabindex="714602">
+              <div
+                id="contenedor_video_1A_base"
+                data-id_player="141"
+                data-id_cuenta="elpais"
+                data-id_media="20211103134021300"
+                class="commonmm_baseExpand"
+              >
+                <div
+                  id="MediaModule_contenedor_video_1A_TopPlayer"
+                  class="commonmm_sonExpand"
+                  style="background-color: black"
+                >
+                  <iframe
+                    id="Controller_youtube_contenedor_video_1A_TopPlayer"
+                    style="
+                      position: absolute;
+                      top: 0px;
+                      left: 0px;
+                      width: 100%;
+                      height: 100%;
+                    "
+                    frameborder="0"
+                    allowfullscreen="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    title="YouTube video player"
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/UDPzzHmAM6c?rel=0&amp;modestbranding=1&amp;color=white&amp;frameborder=0&amp;embed_config=%7B%22autonavRelatedVideos%22%3Atrue%2C%22adsConfig%22%3A%7B%22adTagParameters%22%3A%7B%22iu%22%3A%22%2F7811748%2Felpais_web%2Fplayer_youtube%22%2C%22cust_params%22%3A%22pbskey%253D%2526videoTime%253Dmas45%22%2C%22ppid%22%3Anull%2C%22pp%22%3Anull%7D%7D%7D&amp;enablejsapi=1&amp;origin=https%3A%2F%2Felpais.com&amp;widgetid=3"
+                  ></iframe>
+                </div>
+                <div
+                  id="UIModule_contenedor_video_1A_TopPlayer"
+                  class="commonmm_sonExpand"
+                  style="visibility: hidden"
+                >
+                  <div
+                    id="UIPreview_contenedor_video_1A_TopPlayer"
+                    class="commonmm_sonExpand"
+                    style="visibility: hidden"
+                  ></div>
+                  <div
+                    id="UISkin_contenedor_video_1A_TopPlayer"
+                    class="commonmm_sonExpand"
+                    style=""
+                  ></div>
+                </div>
+                <div
+                  id="AdModule_contenedor_video_1A_TopPlayer"
+                  class="commonmm_sonExpand mm_ad_module"
+                  style="visibility: hidden"
+                ></div>
+              </div>
+            </div>
+            <!-- <script>
+              var mediaTopEmbed_1A = new psd.media.TopEmbed({
+                 "id_cuenta": "elpais",
+                 "id_player": "141",
+                 "id_media": '20211103134021300',
+                 "media_type" : "video",
+                 "id_container": 'contenedor_video_1A'
+               });
+            </script> -->
+          </div>
+          <div class="cv-v_b ocultar">
+            <div id="contenedor_video_1B" tabindex="448579">
+              <div
+                id="contenedor_video_1B_base"
+                data-id_player="141"
+                data-id_cuenta="elpais"
+                data-id_media="2021110313385626"
+                class="commonmm_baseExpand"
+              >
+                <div
+                  id="MediaModule_contenedor_video_1B_TopPlayer"
+                  class="commonmm_sonExpand"
+                  style="background-color: black"
+                >
+                  <iframe
+                    id="Controller_youtube_contenedor_video_1B_TopPlayer"
+                    style="
+                      position: absolute;
+                      top: 0px;
+                      left: 0px;
+                      width: 100%;
+                      height: 100%;
+                    "
+                    frameborder="0"
+                    allowfullscreen="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    title="YouTube video player"
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/qyhpfSxj7V8?rel=0&amp;modestbranding=1&amp;color=white&amp;frameborder=0&amp;embed_config=%7B%22autonavRelatedVideos%22%3Atrue%2C%22adsConfig%22%3A%7B%22adTagParameters%22%3A%7B%22iu%22%3A%22%2F7811748%2Felpais_web%2Fplayer_youtube%22%2C%22cust_params%22%3A%22pbskey%253D%2526videoTime%253Dmas45%22%2C%22ppid%22%3Anull%2C%22pp%22%3Anull%7D%7D%7D&amp;enablejsapi=1&amp;origin=https%3A%2F%2Felpais.com&amp;widgetid=4"
+                  ></iframe>
+                </div>
+                <div
+                  id="UIModule_contenedor_video_1B_TopPlayer"
+                  class="commonmm_sonExpand"
+                  style="visibility: hidden"
+                >
+                  <div
+                    id="UIPreview_contenedor_video_1B_TopPlayer"
+                    class="commonmm_sonExpand"
+                    style="visibility: hidden"
+                  ></div>
+                  <div
+                    id="UISkin_contenedor_video_1B_TopPlayer"
+                    class="commonmm_sonExpand"
+                    style=""
+                  ></div>
+                </div>
+                <div
+                  id="AdModule_contenedor_video_1B_TopPlayer"
+                  class="commonmm_sonExpand mm_ad_module"
+                  style="visibility: hidden"
+                ></div>
+              </div>
+            </div>
+            <!-- <script>
+              var mediaTopEmbed_1B = new psd.media.TopEmbed({
+                id_cuenta: "elpais",
+                id_player: "141",
+                id_media: "2021110313385626",
+                media_type: "video",
+                id_container: "contenedor_video_1B",
+              });
+            </script> -->
+          </div>
+        </div>
+      </div>
+      <div class="cv-b">
+        <a class="cv-b_a" data-type="a" href="#" data-link-track-dtm=""
+          ><span>|</span> casa</a
+        >
+        <a class="cv-b_x" data-type="x" href="#" data-link-track-dtm=""
+          >Cerrar <strong>video</strong></a
+        >
+        <a class="cv-b_b" data-type="b" href="javascript:void(0)" 
+          ><span>|</span> oficina</a
+        >
+
+      
+      </div>
+    </div>
+
+    <!-- <script src="player.js"></script> -->
+
+    <!-- <script>
+      var mediaTopEmbed_1A = new psd.media.TopEmbed({
+        id_cuenta: "elpais",
+        id_player: "141",
+        id_media: "20211103134021300",
+        media_type: "video",
+        id_container: "contenedor_video_1A",
+      });
+    </script>
+
     <script>
+      var mediaTopEmbed_1B = new psd.media.TopEmbed({
+        id_cuenta: "elpais",
+        id_player: "141",
+        id_media: "2021110313385626",
+        media_type: "video",
+        id_container: "contenedor_video_1B",
+      });
+    </script> -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  
+    <script>
+      $(".cv-b_b").click(function () {
+        setTimeout(function () {
+          $(".cv-f_a").fadeOut();
+          $(".cv-f_b").css("width","100%");
+          $(".comparador-videos .cv-f_a:before").css("border-right","transparent");
+        }, 100);
+        setTimeout(function () { 
+          $(".cv-f_b").css("display","none");
+          $(".comparador-videos .cv-v").css("position","initial");
+        }, 500);
+      });
+
       document
         .getElementById("btnBajar")
         .addEventListener("click", function (e) {
