--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -115,7 +115,6 @@
                 ></div>
               </div>
             </div>
- 
           </div>
           <div class="cv-v_b ocultar">
             <div id="contenedor_video_1B" tabindex="448579">
@@ -171,7 +170,6 @@
                 ></div>
               </div>
             </div>
-     
           </div>
         </div>
       </div>
@@ -182,28 +180,27 @@
         <a class="cv-b_x" data-type="x" href="#" data-link-track-dtm=""
           >Cerrar <strong>video</strong></a
         >
-        <a class="cv-b_b" data-type="b" href="javascript:void(0)" 
+        <a class="cv-b_b" data-type="b" href="javascript:void(0)"
           ><span>|</span> oficina</a
         >
-
-      
       </div>
     </div>
 
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  
+
     <script>
       $(".cv-b_b").click(function () {
         setTimeout(function () {
           $(".cv-f_a").fadeOut();
-          $(".cv-f_b").css("width","100%");
-          $(".comparador-videos .cv-f_a:before").css("border-right","transparent");
+          $(".cv-f_b").css("width", "100%");
+          $(".comparador-videos .cv-f_a:before").css(
+            "border-right",
+            "transparent"
+          );
         }, 100);
-        setTimeout(function () { 
-          $(".cv-f_b").css("display","none");
-          $(".comparador-videos .cv-v").css("position","initial");
+        setTimeout(function () {
+          $(".cv-f_b").css("display", "none");
+          $(".comparador-videos .cv-v").css("position", "initial");
         }, 500);
       });
 
