--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="comparador.css" />
 
+
+
+
     <title>Document</title>
   </head>
   <body>
@@ -34,7 +37,7 @@
     </div>
 
     <div class="textvideo">
-      <h1 class="">HORA PUNTA</h1>
+      <h1 class="titprin">HORA PUNTA</h1>
       <h2 class="">
         Nuria González, directora de soluciones innovadoras de Novartis
         Farmacéutica, empieza el día desayunando en la cocina de su madre,
