--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -174,48 +174,21 @@
         </div>
       </div>
       <div class="cv-b">
-        <a class="cv-b_a" data-type="a" href="#" data-link-track-dtm=""
-          ><span>|</span> casa</a
-        >
-        <a class="cv-b_x" data-type="x" href="#" data-link-track-dtm=""
-          >Cerrar <strong>video</strong></a
-        >
-        <a class="cv-b_b" data-type="b" href="javascript:void(0)"
-          ><span>|</span> oficina</a
-        >
+        <a class="cv-b_a" href="javascript:void(0)"><span>|</span> casa</a>
+        <div>
+          <a class="cv-b_x der" href="javascript:void(0)"
+            >der <strong>video</strong></a
+          >
+          <a class="cv-b_x izq" href="javascript:void(0)"
+            >izq <strong>video</strong></a
+          >
+        </div>
+        <a class="cv-b_b" href="javascript:void(0)"><span>|</span> oficina</a>
       </div>
     </div>
 
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script>
-      $(".cv-b_b").click(function () {
-        setTimeout(function () {
-          $(".cv-f_a").fadeOut();
-          $(".cv-f_b").css("width", "100%");
-          $(".comparador-videos .cv-f_a:before").css(
-            "border-right",
-            "transparent"
-          );
-        }, 100);
-        setTimeout(function () {
-          $(".cv-f_b").css("display", "none");
-          $(".comparador-videos .cv-v").css("position", "initial");
-        }, 500);
-      });
-
-      document
-        .getElementById("btnBajar")
-        .addEventListener("click", function (e) {
-          e.preventDefault();
-          let offset = 53;
-          let newTop = window.innerHeight - offset;
-          scroll({
-            top: newTop,
-            behavior: "smooth",
-          });
-        });
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
