--- a/grilla/v1/index.html
+++ b/grilla/v1/index.html
@@ -38,6 +38,10 @@
         <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
           type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Miercoles</button>
       </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
+          type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Jueves</button>
+      </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade show active" id="pills-lunes" role="tabpanel" aria-labelledby="pills-home-tab">
@@ -48,6 +52,9 @@
       </div>
       <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
         <table id="miercoles-data" class="table table-condensed table-bordered"></table>
+      </div>
+      <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+        <table id="jueves-data" class="table table-condensed table-bordered"></table>
       </div>
     </div>
 
