--- a/videos-seccion/index.html
+++ b/videos-seccion/index.html
@@ -20,6 +20,7 @@
       <div id="allList" class="pt-3 pb-5 container">
           <!-- <div id="titleSection">VIDEOS</div> -->
           <div id="titleSection2">VIDEOS MÁS VISTOS</div>
+          <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
           <div class="row justify-content-center" id="mostVideos">
           </div>
           <!-- Temporadas -->
@@ -30,12 +31,12 @@
           </div>
           <div id="playlist" class="shows">
           </div>-->
-      </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-<script src="main.js"></script>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+      <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+      <script src="main.js"></script>
 
 
 </body>
