--- a/grilla/v3/sierra.html
+++ b/grilla/v3/sierra.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-
     <title>Grilla</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -18,14 +17,14 @@
       <div >Grilla de horarios</div>
     </div>
     <div class="tab">
-      <a class="tablinks active" href="index.html">Costa</a>
-      <a class="tablinks" href="sierra.html">Sierra</a>
-      <a class="tablinks" href="inter.html">Internacional</a>
+      <a class="tablinks " href="index.html">Costa</a>
+      <a class="tablinks active" href="sierra.html">Sierra</a>
+      <a class="tablinks " href="inter.html">Internacional</a>
     </div>
 
     <div class="m-2">
       <div id="parrilla">
-        <ul class="nav nav-pills mb-3 mt-3" id="pills-tab" role="tablist"></ul>
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist"></ul>
         <div class="tab-content" id="pills-tabContent"></div>
       </div>
     </div>
@@ -71,22 +70,8 @@
         } else if (today.getDate() == "20") {
           console.log(today.getDate());
           tempDate.setDate(today.getDate() + 1);
-        }else if (today.getDate() == "21") {
-          tempDate.setDate(today.getDate() + 7);
-        }else if (today.getDate() == "22") {
-          tempDate.setDate(today.getDate() + 6);
-        }else if (today.getDate() == "23") {
-          tempDate.setDate(today.getDate() + 5);
-        }else if (today.getDate() == "24") {
+        } else {
           tempDate.setDate(today.getDate() + 4);
-        }else if (today.getDate() == "25") {
-          tempDate.setDate(today.getDate() + 3);
-        }else if (today.getDate() == "26") {
-          tempDate.setDate(today.getDate() + 2);
-        }else if (today.getDate() == "27") {
-          tempDate.setDate(today.getDate() + 1);
-        }else{
-          tempDate.setDate(today.getDate() + 1);
         }
 
         for (var i = 7; i > 0; i--) {
@@ -133,7 +118,7 @@
       sheetrock({
         url: principalSheet,
 
-        query: "select A,B,C,D,E,F,G,H,I,J,K,L,M,N where C = 3",
+        query: "select A,B,C,D,E,F,G,H,I,J,K,L,M,N where C = 2",
         fetchSize: 1500,
         callback: function (data, sheetrock, response) {
           let rows = response.raw.table.rows;
