--- a/urldinamica/index.html
+++ b/urldinamica/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <style>
+    .h-400 {
+      height: 400px;
+    }
+  </style>
+  <body>
+    <div class="aviso-legal">
+      <div class="derechos-reservados" id="fecha-footer"></div>
+      <div class="texto">
+        Prohibida la reproducción total, parcial y traducción a cualquier
+        idioma, sin autorización escrita de su titular, de todos los contenidos
+        de Ecuavisa.
+      </div>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirección</title>
-</head>
+    <h4 style="text-align: center;color: blue;"><strong><em>Antes de empezar&nbsp; con la determinación de las ecuaciones lineales con <strong>dos</strong> variables es necesario tener un amplio conocimiento de la&nbsp;</em></strong></h4>
+    <h4 style="text-align: center; color:blue;"><strong><em><strong>ley de los signos matemáticos</strong></em></strong></h4>
 
-<body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.1.4/dist/sheetrock.min.js"></script>
-    <script src="main.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    <script>
+      //Date().getFullYear()
+      let date = new Date().getFullYear();
+      console.log(date);
+      document.getElementsByClassName("derechos-reservados").innerHTML = date;
+    //   $(".derechos-reservados").append(`©Derechos reservados ${date} Ecuavisa`);
 
+    </script>
+  </body>
 </html>
